--- a/Controller/src/main/prod/uploadfiles.properties
+++ b/Controller/src/main/prod/uploadfiles.properties
@@ -1,5 +1,5 @@
-upload.uploadDir = /Users/elatome/
-upload.userFilesDir = /Users/elatome/dir/
+upload.uploadDir = /opt/temp/
+upload.userFilesDir = /opt/temp/
 upload.maxFile = 5242880
 upload.maxRequest = 15728640
 upload.threshold = 0
