--- a/Controller/src/main/uat/db.properties
+++ b/Controller/src/main/uat/db.properties
@@ -1,4 +1,4 @@
 db.user = devpreprod
 db.password = Fh24soaf8sy3
-db.url = jdbc:mysql://localhost:3306/birzha
+db.url = jdbc:mysql://localhost:3306/birzha?useUnicode=true&characterEncoding=UTF-8
 db.classname = com.mysql.jdbc.Driver
