--- a/Controller/src/main/dev/uploadfiles.properties
+++ b/Controller/src/main/dev/uploadfiles.properties
@@ -1,5 +1,5 @@
-upload.uploadDir = /Users/elatome/
-upload.userFilesDir = /Users/elatome/dir/
+upload.uploadDir = /Users/random9/
+upload.userFilesDir = /Users/random9/dir/
 upload.userFilesLogicalDir = /userFiles
 upload.maxFile = 5242880
 upload.maxRequest = 15728640
