--- a/Controller/src/main/webapp/WEB-INF/web.xml
+++ b/Controller/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>BotDetect Captcha</servlet-name>
         <url-pattern>/botdetectcaptcha</url-pattern>
     </servlet-mapping>
+    <context-param>
+        <param-name>BDC_soundEnabled</param-name>
+        <param-value>false</param-value>
+    </context-param>
 
 
 </web-app>
