--- a/Controller/src/main/dev/uploadfiles.properties
+++ b/Controller/src/main/dev/uploadfiles.properties
@@ -1,5 +1,5 @@
-upload.uploadDir = c:/Users/Public/upload/
-upload.userFilesDir = c:/Users/Public/upload/
+upload.uploadDir = ${user.home}
+upload.userFilesDir = ${user.home}
 upload.userFilesLogicalDir = /userFiles
 upload.maxFile = 5242880
 upload.maxRequest = 15728640
