--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,7 @@ target/
 *.class
 *.iml
 .idea/
+*.spvchain
+*.wallet
 Status API Training Shop Blog About Pricing
 © 2016 GitHub, Inc. Terms Privacy Security Contact Help
