--- a/Controller/src/main/prod/bitcoinj.properties
+++ b/Controller/src/main/prod/bitcoinj.properties
@@ -1,3 +1,3 @@
-bitcoinj.wallet_dump_dir = /opt/bitcoin_dump
+bitcoinj.wallet_dump_dir = /data/bitcoin_dump
 bitcoinj.wallet_file_prefix = exrates_wallet
 bitcoinj.net = main
