--- a/Controller/src/main/dev/merchants/perfectmoney.properties
+++ b/Controller/src/main/dev/merchants/perfectmoney.properties
@@ -1,16 +1,10 @@
-#old account
-#accountId=8444403
-#accountPass=777Sifama07
-#USDAccount=U11968085
-#EURAccount=E11508301
-#alternatePassphrase=59849UnKgUvwxLetcxLGevJIw
-accountId=6290878
-accountPass=777Sifama07
+accountId=5096709
+accountPass=Qqo-3VS-Z6t-6od
 payeeName=Exrates
-paymentSuccess=http://localhost:8080/merchants/perfectmoney/payment/success
-paymentFailure=http://localhost:8080/merchants/perfectmoney/payment/failure
-paymentStatus=http://localhost:8080/merchants/perfectmoney/payment/status
-USDAccount=U11198056
-EURAccount=E6038177
-alternatePassphrase=41ZP88K5IAUPwyCuVzCEvBDJv
-ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;
+paymentSuccess=http://193.93.79.99:9000/merchants/perfectmoney/payment/success
+paymentFailure=http://193.93.79.99:9000/merchants/perfectmoney/payment/failure
+paymentStatus=http://193.93.79.99:9000/merchants/perfectmoney/payment/status
+USDAccount=U13584384
+EURAccount=E13908218
+alternatePassphrase=05V047CXHTgghLEkycoLpxwkE
+ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;78.41.203.75;
