--- a/Controller/src/main/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/prod/merchants/perfectmoney.properties
@@ -5,6 +5,6 @@ paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
 paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
 paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
 USDAccount=U13584384
-EURAccount=U13584384
-alternatePassphrase=5TC122iw3WTKfUhbOoEsowFDp
+EURAccount=E13908218
+alternatePassphrase=05V047CXHTgghLEkycoLpxwkE
 ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;78.41.203.75;
