--- a/Controller/src/main/resources/edc_cli_wallet.properties
+++ b/Controller/src/main/resources/edc_cli_wallet.properties
@@ -1,3 +1,5 @@
-edc.blockchain.host = http://localhost:8092
+edc.blockchain.host_fast = http://localhost:8091
+edc.blockchain.host_delayed = http://localhost:8092
 edc.account.registrar = exrates-currency-exchange
 edc.account.referrer = exrates-currency-exchange
+edc.account.main = ajet2103
