--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -1,5 +1,11 @@
-mail.host=smtp.mail.ru
-mail.port=465
-mail.protocol=smtps
-mail.user=exrates.me@mail.ru
-mail.password=R345Jdber34O90
+mail_support.host=exrates.top
+mail_support.port=587
+mail_support.protocol=smtp
+mail_support.user=mail@exrates.top
+mail_support.password=R37yt7gEft
+
+mail_info.host=exrates.top
+mail_info.port=587
+mail_info.protocol=smtp
+mail_info.user=no-replay@exrates.top
+mail_info.password=Mt5qNrHjjt
