--- a/Controller/src/main/uat/job.properties
+++ b/Controller/src/main/uat/job.properties
@@ -1,5 +1,7 @@
 # 4320 = 72 hours * 60 minutes
 invoice.invoiceTimeOutIntervalMinutes = 5
+invoice.blockNotifyUsers = true
 # 5760 = 96 hours * 60 minutes
 btcInvoice.invoiceTimeOutIntervalMinutes = 5
+btcInvoice.blockNotifyUsers = true
 # to switch off set -1
