--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<log4j2.version>2.1</log4j2.version>
 		<mysql-driver.version>5.1.38</mysql-driver.version>
 		<commons-dbcp2.version>2.1.1</commons-dbcp2.version>
+		<hikari-cp-version>2.6.0</hikari-cp-version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<jstl.version>1.2.1</jstl.version>
 		<spring-jdbc.version>4.2.4.RELEASE</spring-jdbc.version>
@@ -52,6 +53,13 @@
 				<version>${commons-dbcp2.version}</version>
 			</dependency>
 		<!--Mysql JDBC Driver-->
+
+		<!--Hikari CP-->
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>${hikari-cp-version}</version>
+		</dependency>
 
 		<!--Spring framework-->
 			<dependency>
