--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,13 @@
 			<artifactId>ehcache</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.neemre.btcd-cli4j</groupId>
+			<artifactId>btcd-cli4j-core</artifactId>
+			<version>0.5.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 
@@ -336,6 +343,11 @@
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
 			</snapshots>
+		</repository>
+		<repository>
+			<id>mvn-nemp-ftp</id>
+			<name>Nemp's Maven Repository</name>
+			<url>http://mvn.neemre.com/</url>
 		</repository>
 	</repositories>
 </project>
