--- a/Controller/src/main/dev/node_config.properties
+++ b/Controller/src/main/dev/node_config.properties
@@ -4,3 +4,6 @@ node.bitcoind.rpc.port = 18332
 node.bitcoind.rpc.user = wayfarer88
 node.bitcoind.rpc.password = cnhfyybr88
 node.bitcoind.http.auth_scheme = Basic
+node.bitcoind.notification.alert.port = 5158
+node.bitcoind.notification.block.port = 5159
+node.bitcoind.notification.wallet.port = 5160
