--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<spring-websocket.version>4.3.2.RELEASE</spring-websocket.version>
 		<spring-messaging.version>4.3.0.RELEASE</spring-messaging.version>
 		<bitcoinj.version>0.14.3</bitcoinj.version>
+		<btcd-cli4j.version>0.5.1</btcd-cli4j.version>
 	</properties>
 
 	<dependencies>
@@ -303,7 +304,12 @@
 		<dependency>
 			<groupId>com.neemre.btcd-cli4j</groupId>
 			<artifactId>btcd-cli4j-core</artifactId>
-			<version>0.5.1</version>
+			<version>${btcd-cli4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.neemre.btcd-cli4j</groupId>
+			<artifactId>btcd-cli4j-daemon</artifactId>
+			<version>${btcd-cli4j.version}</version>
 		</dependency>
 
 
