--- a/Controller/src/main/prod/merchants/edcmerchant.properties
+++ b/Controller/src/main/prod/merchants/edcmerchant.properties
@@ -1,3 +1,3 @@
 edcmerchant.token = 0190804484737779216097337067072357
-edcmerchant.main_account = vsolo77
+edcmerchant.main_account = ex-r-payment
 edcmerchant.hook = https://lk.exrates.me/merchants/edc/payment/received
