--- a/Controller/src/main/resources/edc_cli_wallet.properties
+++ b/Controller/src/main/resources/edc_cli_wallet.properties
@@ -2,4 +2,5 @@ edc.blockchain.host_fast = http://localhost:8091
 edc.blockchain.host_delayed = http://localhost:8092
 edc.account.registrar = exrates-currency-exchange
 edc.account.referrer = exrates-currency-exchange
-edc.account.main = vsolo77
+edc.account.main = ex-r-payment
+edc.account.main.private.key = 5KT1aBzzgRtxbRHAUsFHB3f1NtPg8vTzfNaoQ3D1Z5iWZre2KDh
