--- a/Controller/src/main/dev/merchants/btc_wallet.properties
+++ b/Controller/src/main/dev/merchants/btc_wallet.properties
@@ -1,1 +1,3 @@
 bitcoin.service.class=BitcoinCoreWalletServiceImpl
+btc.wallet.password=sdsdf lerslfg kjherb szkxyct dfnbr ciuvy fufygf psdkene dcjchebwhsg didfu bsvscs fgfgfg
+btc.backup.folder=${user.home}\\btc_backup\\
