--- a/Controller/src/main/prod/merchants/btc_wallet.properties
+++ b/Controller/src/main/prod/merchants/btc_wallet.properties
@@ -1,3 +1,3 @@
 bitcoin.service.class=BitcoinJWalletServiceImpl
-btc.wallet.password=sdsdf lerslfg kjherb szkxyct dfnbr ciuvy fufygf psdkene dcjchebwhsg didfu bsvscs fgfgfg
+btc.wallet.password=MxQR8wTcEuuNJdFzxGKz9MDcjawg_Y5N66uIHELS5JY=
 btc.backup.folder=/data/.bitcoin/btc_backup/
