--- a/Controller/src/main/dev/merchants/btc_wallet.properties
+++ b/Controller/src/main/dev/merchants/btc_wallet.properties
@@ -1,3 +1,3 @@
 bitcoin.service.class=BitcoinCoreWalletServiceImpl
-btc.wallet.password=sdsdf lerslfg kjherb szkxyct dfnbr ciuvy fufygf psdkene dcjchebwhsg didfu bsvscs fgfgfg
+btc.wallet.password=pass123
 btc.backup.folder=${user.home}\\btc_backup\\
