--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<spring-websocket.version>4.3.2.RELEASE</spring-websocket.version>
 		<spring-messaging.version>4.3.0.RELEASE</spring-messaging.version>
 		<bitcoinj.version>0.14.3</bitcoinj.version>
+		<aspectj.version>1.8.10</aspectj.version>
 	</properties>
 
 	<dependencies>
@@ -156,6 +157,24 @@
 				<version>RELEASE</version>
 			</dependency>
 		<!--Spring framework-->
+
+		<!--AspectJ-->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+
+
+
+
+		<!--AspectJ-->
+
 
 		<!--Servlet-->
 			<dependency>
