--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -103,7 +103,8 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.3.6</version>
+      <!--<version>4.3.6</version>-->
+      <version>4.5.3</version>
     </dependency>
     <dependency>
       <groupId>com.neemre.btcd-cli4j</groupId>
@@ -119,6 +120,11 @@
       <groupId>org.web3j</groupId>
       <artifactId>core</artifactId>
       <version>2.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.reactivex</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>1.2.9</version>
     </dependency>
   </dependencies>
   <repositories>
