--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ target/
 Status API Training Shop Blog About Pricing
 © 2016 GitHub, Inc. Terms Privacy Security Contact Help
 /my
+/Service/src/main/java/me/exrates/service/util/test.java
