--- a/Controller/src/main/prod/merchants/ethereum.properties
+++ b/Controller/src/main/prod/merchants/ethereum.properties
@@ -1,4 +1,4 @@
 #Main
-ethereum.destinationDir = //data//.ethereum//keystore//
+ethereum.destinationDir = //data//ethereum//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x061372f91f949EFFb934ABADFf5f0636de09113D
