--- a/Controller/src/main/dev/merchants/btc_wallet.properties
+++ b/Controller/src/main/dev/merchants/btc_wallet.properties
@@ -1,3 +1,3 @@
-bitcoin.service.class=BitcoinCoreWalletServiceImpl
 btc.wallet.password=pass123
 btc.backup.folder=${user.home}\\btc_backup\\
+btc.propertySource=node_config.properties
