--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -9,3 +9,6 @@ mail_info.port=587
 mail_info.protocol=smtp
 mail_info.user=no-replay@exrates.top
 mail_info.password=Mt5qNrHjjt
+
+mail_info.allowedOnly=true
+mail_info.allowedEmails=golvazin@gmail.com
