--- a/Controller/src/main/prod/merchants/ltc_wallet.properties
+++ b/Controller/src/main/prod/merchants/ltc_wallet.properties
@@ -1,3 +1,3 @@
 ltc.wallet.password=pass123
-btc.backup.folder=/data/.litecoin-data/ltc_backup/
+ltc.backup.folder=/data/.litecoin-data/ltc_backup/
 ltc.propertySource=node_config_ltc.properties
