--- a/Controller/src/main/prod/merchants/litecoin_wallet.properties
+++ b/Controller/src/main/prod/merchants/litecoin_wallet.properties
@@ -1,3 +1,3 @@
 wallet.password=pass123
 backup.folder=/data/.litecoin-data/ltc_backup/
-propertySource=node_config_ltc.properties
+node.propertySource=node_config_ltc.properties
