--- a/Controller/src/main/uat/merchants/bitcoin_wallet.properties
+++ b/Controller/src/main/uat/merchants/bitcoin_wallet.properties
@@ -1,3 +1,3 @@
 wallet.password=pass123
 backup.folder=/data/.bitcoin/btc_backup/
-propertySource=node_config.properties
+node.propertySource=node_config.properties
