--- a/Controller/src/main/dev/merchants/ethereum.properties
+++ b/Controller/src/main/dev/merchants/ethereum.properties
@@ -1,5 +1,8 @@
 #Main
-ethereum.destinationDir = C:\\Ethereum1\\keystore\\
+
+ethereum.currency = Ethereum
+ethereum.url = http://localhost:8545/
+ethereum.destinationDir = D:\\Ethereum1\\Original\\keystore\\
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
 
