--- a/Controller/src/main/prod/merchants/ethereum.properties
+++ b/Controller/src/main/prod/merchants/ethereum.properties
@@ -1,4 +1,5 @@
 #Main
+ethereum.url = http://localhost:8545/
 ethereum.destinationDir = //data//ethereum//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
