--- a/Controller/src/main/dev/merchants/ripple.properties
+++ b/Controller/src/main/dev/merchants/ripple.properties
@@ -5,6 +5,7 @@ ripple.address=rhdBEVaoJ7cjYtWKj2GPtrqaNXDHTyaipq
 ripple.secret=shHV5ieKBYLFaUtZy9SGmMGSBi6Th
 
 
-ripple.rippled.rpcUrl=https://api.altnet.rippletest.net:51234
+ripple.rippled.rpcUrl=http://163.172.53.240:5005
+ripple.rippled.ws=http://163.172.53.240:6006
 ripple.account.address=1111
 ripple.account.secret=2222
