--- a/Controller/src/main/uat/merchants/ethereumClassic.properties
+++ b/Controller/src/main/uat/merchants/ethereumClassic.properties
@@ -1,4 +1,5 @@
 #Main
+ethereum.currency = Ethereum Classic
 ethereum.url = http://localhost:8101
 ethereum.destinationDir = //data//ethereum_classic//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
