--- a/Controller/src/main/dev/merchants/ripple.properties
+++ b/Controller/src/main/dev/merchants/ripple.properties
@@ -1,11 +1,6 @@
 
-ripple.server.ws=wss://s.altnet.rippletest.net:51233
-ripple.server.rest=https://api.altnet.rippletest.net:5990
-ripple.address=rhdBEVaoJ7cjYtWKj2GPtrqaNXDHTyaipq
-ripple.secret=shHV5ieKBYLFaUtZy9SGmMGSBi6Th
+ripple.rippled.rpcUrl=https://api.altnet.rippletest.net:51234
+ripple.rippled.ws=wss://s.altnet.rippletest.net:51233
 
-
-ripple.rippled.rpcUrl=http://163.172.53.240:5005
-ripple.rippled.ws=http://163.172.53.240:6006
-ripple.account.address=1111
-ripple.account.secret=2222
+ripple.account.address=r9N13g2GExqk9DciVpmSvwrjjVw5vVsCSa
+ripple.account.secret=spF7yZd1iFTf9bc5dNPEZ1JHaLtnn
