--- a/Controller/src/main/prod/merchants/ethereumClassic.properties
+++ b/Controller/src/main/prod/merchants/ethereumClassic.properties
@@ -1,4 +1,5 @@
 #Main
+ethereum.currency = Ethereum Classic
 ethereumClassic.url = http://localhost:8101
 ethereumClassic.destinationDir = //data//ethereum_classic//keystore//
 ethereumClassic.password = 061372f91f949effb934abadff5f0636de09113d
