--- a/Controller/src/main/prod/node_config_ltc.properties
+++ b/Controller/src/main/prod/node_config_ltc.properties
@@ -1,8 +1,8 @@
 node.bitcoind.rpc.protocol = http
 node.bitcoind.rpc.host = 127.0.0.1
 node.bitcoind.rpc.port = 9332
-node.bitcoind.rpc.user = wayfarer88
-node.bitcoind.rpc.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
+node.bitcoind.rpc.user = devprod
+node.bitcoind.rpc.password = ZcergOfTzoSbDEFNdcxaEBRDRJh3VOOs-anma1viJPk=
 node.bitcoind.http.auth_scheme = Basic
 node.bitcoind.notification.alert.port = 5268
 node.bitcoind.notification.block.port = 5269
