--- a/Controller/src/main/prod/merchants/ethereumClassic.properties
+++ b/Controller/src/main/prod/merchants/ethereumClassic.properties
@@ -1,5 +1,6 @@
 #Main
-ethereumClassic.url = http://localhost:8101
-ethereumClassic.destinationDir = //data//ethereum_classic//keystore//
-ethereumClassic.password = 061372f91f949effb934abadff5f0636de09113d
-ethereumClassic.mainAddress = 0x82907149804Cf356fCe9718efdCF5E85C8820Ca5
+ethereum.currency = Ethereum Classic
+ethereum.url = http://localhost:8101
+ethereum.destinationDir = //data//ethereum_classic//keystore//
+ethereum.password = 061372f91f949effb934abadff5f0636de09113d
+ethereum.mainAddress = 0x82907149804Cf356fCe9718efdCF5E85C8820Ca5
