--- a/Controller/src/main/prod/merchants/perfectmoney.properties
+++ b/Controller/src/main/prod/merchants/perfectmoney.properties
@@ -1,11 +1,11 @@
 perfectmoney.url=https://perfectmoney.is/api/step1.asp
-accountId=5096709
-accountPass=Qqo-3VS-Z6t-6od
-payeeName=Exrates
-paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
-paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
-paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
-USDAccount=U13584384
-EURAccount=E13908218
-alternatePassphrase=05V047CXHTgghLEkycoLpxwkE
-ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;78.41.203.75;
+perfectmoney.accountId=5096709
+perfectmoney.accountPass=Qqo-3VS-Z6t-6od
+perfectmoney.payeeName=Exrates
+perfectmoney.paymentSuccess=https://lk.exrates.me/merchants/perfectmoney/payment/success
+perfectmoney.paymentFailure=https://lk.exrates.me/merchants/perfectmoney/payment/failure
+perfectmoney.paymentStatus=https://lk.exrates.me/merchants/perfectmoney/payment/status
+perfectmoney.USDAccount=U13584384
+perfectmoney.EURAccount=E13908218
+perfectmoney.alternatePassphrase=05V047CXHTgghLEkycoLpxwkE
+perfectmoney.ipWhiteList=77.109.141.170;91.205.41.208;94.242.216.60;78.41.203.75;
