--- a/Controller/src/main/uat/merchants/ripple.properties
+++ b/Controller/src/main/uat/merchants/ripple.properties
@@ -1,5 +1,6 @@
 
-ripple.rippled.rpcUrl=http://163.172.53.240:5005
-ripple.rippled.ws=ws://163.172.53.240:6006
-ripple.account.address=1111
-ripple.account.secret=2222
+ripple.rippled.rpcUrl=https://api.altnet.rippletest.net:51234
+ripple.rippled.ws=wss://s.altnet.rippletest.net:51233
+
+ripple.account.address=r9N13g2GExqk9DciVpmSvwrjjVw5vVsCSa
+ripple.account.secret=spF7yZd1iFTf9bc5dNPEZ1JHaLtnn
