--- a/Controller/src/main/dev/merchants/edcmerchant.properties
+++ b/Controller/src/main/dev/merchants/edcmerchant.properties
@@ -1,3 +1,4 @@
 edcmerchant.token = 0190804484737779216097337067072357
 edcmerchant.main_account = ajet2103
 edcmerchant.hook = http://91.142.174.34:9000/merchants/edc/payment/received
+edcmerchant.history =
