--- a/Controller/src/main/dev/merchants/interkassa.properties
+++ b/Controller/src/main/dev/merchants/interkassa.properties
@@ -1,3 +1,4 @@
+interkassa.url=https://sci.interkassa.com/
 interkassa.checkoutId=57163a9b3d1eafe27b8b456a
 interkassa.statustUrl=http://193.93.79.99:9000/merchants/interkassa/payment/status
 interkassa.successtUrl=http://127.0.0.1:9000/merchants/interkassa/payment/success
