--- a/Controller/src/main/prod/merchants/interkassa.properties
+++ b/Controller/src/main/prod/merchants/interkassa.properties
@@ -1,3 +1,4 @@
+interkassa.url=https://sci.interkassa.com/
 interkassa.checkoutId=57163a9b3d1eafe27b8b456a
 interkassa.statustUrl=https://lk.exrates.me/merchants/interkassa/payment/status
 interkassa.successtUrl=https://lk.exrates.me/merchants/interkassa/payment/success
