--- a/Controller/src/main/uat/merchants/interkassa.properties
+++ b/Controller/src/main/uat/merchants/interkassa.properties
@@ -1,3 +1,4 @@
+interkassa.url=https://sci.interkassa.com/
 interkassa.checkoutId=57163a9b3d1eafe27b8b456a
 interkassa.statustUrl=http://prod.exrates.me/merchants/interkassa/payment/status
 interkassa.successtUrl=http://prod.exrates.me/merchants/interkassa/payment/success
