--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -126,6 +126,13 @@
       <artifactId>rxjava</artifactId>
       <version>1.2.9</version>
     </dependency>
+    <dependency>
+      <groupId>stellar</groupId>
+      <artifactId>java-stellar-sdk</artifactId>
+      <version>0.1.9</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/stellar-sdk.jar</systemPath>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
