--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -131,7 +131,7 @@
     <repository>
       <id>btcd-cli4j-inner</id>
       <name>btcd-cli4j Inner Repo</name>
-      <url>file://${project.basedir}/libs</url>
+      <url>file:///${project.basedir}/libs</url>
     </repository>
   </repositories>
 
