--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -7,8 +7,8 @@ mail_support.password=R37yt7gEft
 mail_info.host=exrates.top
 mail_info.port=587
 mail_info.protocol=smtp
-mail_info.user=no-replay@exrates.top
-mail_info.password=Mt5qNrHjjt
+mail_info.user=no-reply@exrates.top
+mail_info.password=E3ZW3397dV
 
 mail_info.allowedOnly=true
 mail_info.allowedEmails=golvazin@gmail.com,avto12@i.ua
