--- a/Controller/src/main/uat/node_config/node_config_atb.properties
+++ b/Controller/src/main/uat/node_config/node_config_atb.properties
@@ -7,3 +7,4 @@ node.bitcoind.http.auth_scheme = Basic
 node.bitcoind.notification.alert.port = 5458
 node.bitcoind.notification.block.port = 5459
 node.bitcoind.notification.wallet.port = 5460
+node.bitcoind.notification.instantsend.port = 5461
