--- a/Controller/src/main/uat/merchants/atb_wallet.properties
+++ b/Controller/src/main/uat/merchants/atb_wallet.properties
@@ -1,3 +1,3 @@
 wallet.password=pass123
-backup.folder=/opt/atbcoin/.atbcoin/backup
+backup.folder=/opt/atbcoin/.atbcoin/backup/
 node.propertySource=node_config/node_config_atb.properties
