--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -137,6 +137,11 @@
       <version>0.6.91-BETA</version>
     </dependency>
     <dependency>
+      <groupId>iota</groupId>
+      <artifactId>jota</artifactId>
+      <version>0.9.1</version>
+    </dependency>
+    <dependency>
       <groupId>net.minidev</groupId>
       <artifactId>json-smart</artifactId>
       <version>2.3</version>
