--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,11 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
+		<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.7</version>
+		</dependency>
 
 	</dependencies>
 
