--- a/Controller/src/main/dev/merchants/lisk.properties
+++ b/Controller/src/main/dev/merchants/lisk.properties
@@ -1,4 +1,5 @@
 lisk.node.host=http://192.168.99.100
 lisk.node.port=7000
-lisk.main.address=qwerty
-lisk.main.secret=12342345345sdfgsdfg
+lisk.main.address=2153431705828817770L
+lisk.main.secret=rice floor forest hole divorce bike caution child ankle fortune raccoon beef
+lisk.min.confirmations=30
