--- a/Controller/src/main/uat/merchants/lisk.properties
+++ b/Controller/src/main/uat/merchants/lisk.properties
@@ -1,4 +1,4 @@
-lisk.node.host=http://163.172.53.240
+lisk.node.host=http://testnet.lisk.io
 lisk.node.port=7000
 lisk.main.address=2153431705828817770L
 lisk.main.secret=rice floor forest hole divorce bike caution child ankle fortune raccoon beef
