--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -142,6 +142,16 @@
       <version>0.9.2</version>
     </dependency>
     <dependency>
+      <groupId>monero</groupId>
+      <artifactId>monero-common</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>monero</groupId>
+      <artifactId>monero-core</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>net.minidev</groupId>
       <artifactId>json-smart</artifactId>
       <version>2.3</version>
