--- a/Controller/src/main/prod/merchants/monero.properties
+++ b/Controller/src/main/prod/merchants/monero.properties
@@ -1,6 +1,8 @@
-monero.host = 127.0.0.1
-monero.port = 18082
+#monero.host = 127.0.0.1
+#monero.port = 18082
+monero.host = dev.exrates.tech
+monero.port = 28081
 monero.login = monero_rpc
 monero.password = asdfretrgh2423534wrf
-monero.mode = test
+monero.mode = main
 
