--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,16 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.7.1-1</version>
 			</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.1</version>
+		</dependency>
 		<!--Marshalling-->
 
 		<!--Mail-->
