--- a/Controller/src/main/uat/merchants/ethereum.properties
+++ b/Controller/src/main/uat/merchants/ethereum.properties
@@ -1,11 +1,13 @@
 #Main
-#ethereum.destinationDir = //data//ethereum//keystore//
-#ethereum.password = 061372f91f949effb934abadff5f0636de09113d
-#ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
+ethereum.currency = Ethereum
+ethereum.url = http://163.172.77.155:8545/
+ethereum.destinationDir = //data//ethereum//keystore//
+ethereum.password = 061372f91f949effb934abadff5f0636de09113d
+ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
 
 #Test
-ethereum.currency = Ethereum
-ethereum.url = http://localhost:8545/
-ethereum.destinationDir = //data//ethereum//testnet//keystore//
-ethereum.password = 061372f91f949effb934abadff5f0636de09113d
-ethereum.mainAddress = 0xa8522390c0Ae551028fbfb5ef97A1aF13F5492a8
+#ethereum.currency = Ethereum
+#ethereum.url = http://localhost:8545/
+#ethereum.destinationDir = //data//ethereum//testnet//keystore//
+#ethereum.password = 061372f91f949effb934abadff5f0636de09113d
+#ethereum.mainAddress = 0xa8522390c0Ae551028fbfb5ef97A1aF13F5492a8
