--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,12 @@
 			<version>3.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambotsextensions</artifactId>
+			<version>3.3</version>
+		</dependency>
+
 	</dependencies>
 
 
