--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,12 @@
 			<version>1.10.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.zeromq</groupId>
+			<artifactId>jeromq</artifactId>
+			<version>0.4.2</version>
+		</dependency>
+
 	</dependencies>
 
 
