--- a/Controller/src/main/dev/merchants/atb_wallet.properties
+++ b/Controller/src/main/dev/merchants/atb_wallet.properties
@@ -1,3 +1,4 @@
 wallet.password=pass123
 backup.folder=${user.home}\\atb_backup\\
 node.propertySource=node_config/node_config_atb.properties
+node.zmqEnabled=true
