--- a/Controller/src/main/dev/merchants/dogecoin_wallet.properties
+++ b/Controller/src/main/dev/merchants/dogecoin_wallet.properties
@@ -1,3 +1,4 @@
 wallet.password=pass123
 backup.folder=${user.home}\\doge_backup\\
 node.propertySource=node_config/node_config_doge.properties
+node.zmqEnabled=false
