--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,19 @@
 			<artifactId>jeromq</artifactId>
 			<version>0.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-bom</artifactId>
+			<version>Bismuth-RELEASE</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+
 
 	</dependencies>
 
